# python-fast-api

./: .env  .env.sample  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 3b13a581a178_create_users_table.py  444214d0a1e3_create_users_table.py  69202f5a3e49_create_users_table.py  8c5e55b57f55_create_users_table.py  f083b1d5c07a_add_is_deleted_column.py
data/: seed_users.py
models/: db.py  user_models.py
repositories/: user_repository.py
routers/: status.py  users.py
schemas/: user_schemas.py
services/: user_service.py
tests/: conftest.py
tests/api/: test_smoke.py  test_users_api.py
tests/unit/: test_user_repository.py  test_user_service.py
